# prechelt-phone-number-encoding

src/rust/phone_encoder/: Cargo.toml
src/rust/phone_encoder/src/: main.rs
