[package]
name = "phone_encoder"
version = "0.1.1"
edition = "2018"
authors = ["Renato Athaydes <renato@athaydes.com>",
           "Jesse McDonald <nybble41@gmail.com>"]
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
